# image-manger-cli

./: .dockerignore  .gitignore  .golangci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  justfile  main.go
.github/workflows/: ci.yml
cmd/: command.go  common_flags.go  dedup_command.go  sort_command.go
config/: config.go
core/: go.mod  go.sum
core/config/: config.go  config_test.go  constants.go  dateconfig.go  deduplicatorconfig.go  defaultconfigfactory.go  defaultconfigfactory_test.go  defaultconfigloader.go  defaultconfigloader_test.go  defaultfilereader.go  defaultfilereader_test.go  exifconfig.go  exifconfig_test.go  filesconfig.go  interfaces.go  sorterconfig.go  yamlparser.go  yamlparser_test.go
core/date/: dateprocessor.go  dateprocessor_test.go  interfaces.go
core/image/: hashinfo.go  hashinfo_test.go  image.go  image_test.go
core/task/: deduptask.go  deduptask_test.go  deduptaskbuilder.go  deduptaskbuilder_test.go  defaultgroupflattener.go  defaultgroupflattener_test.go  interfaces.go  sorttask.go  (+3 more)
date/: creation_time_darwin.go  creation_time_strategy.go  creation_time_windows.go  date_processor.go  date_stragegy_interface.go  exif_strategy.go  mod_time_strategy.go
i18n/: i18n.go
image/: image.go
image_deduplicator/: deduplicator.go
image_sorter/: image_processor.go  sorter.go
internal/: commandexecutor.go  commandexecutor_test.go  commandexecutorbuilder.go  commands.go  commands_test.go
locales/: de.yaml  en.yaml
log/: logger.go
src/: main.rs
util/: file_utils.go
(+194 files in other folders)
