[package]
name = "image-manager-cli"
version = "0.1.0"
edition = "2021"
authors = ["Elias Schneider <31616053+schneiel@users.noreply.github.com>"]
description = "A CLI tool for image organization and duplicate detection using the image-manager library"
license = "MIT"

[[bin]]
name = "image-manager-cli"
path = "src/main.rs"

[dependencies]
image-manager-lib = { version = "0.1", git = "https://github.com/schneiel/image-manager-lib" }
clap = { version = "4.4", features = ["derive", "color"] }
indicatif = "0.17"
console = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"

# Local development: uncomment to use local version
# [patch.crates-io]
# image-manager-lib = { path = "../image-manager-lib" }
